address comments: modify error styling, add max-height to dropdown and wrap if max-height is not reached, fix bug where dropdown sometimes does not expand while typing

--- a/client/src/components/atoms/style/SearchableDropdown.scss
+++ b/client/src/components/atoms/style/SearchableDropdown.scss
@@ -1,8 +1,14 @@
 .searchable-dropdown {
-		width: 374px;
-		height: 146px;
-		margin-bottom: 100px;
-		margin-left: 20px;
+  width: 374px;
+  height: 146px;
+  margin-bottom: 100px;
+  margin-left: 20px;
+
+  .textfield {
+    margin-bottom: 5px;
+    width: 373px;
+    height: 45px;
+  }
 
 	.dropdown-header {
 		@include normal-text;
@@ -21,8 +27,13 @@
 		font-size: 14px;
 		line-height: 20px;
 
-		padding: 8px 13px;
+    padding-top: 5px;
+    padding-left: 13px;
 		height: 30px;
+
+    &:last-child {
+      margin-bottom: 8px;
+    }
 	}
 
 	.no-items-found {
